# data-science-template

./: README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
{{cookiecutter.directory_name}}/src/: app.py
